--- a/index.html
+++ b/index.html
@@ -10,9 +10,34 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Products</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Add Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="search.html">Search Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="delete.html">Delete Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="viewall.html">View Products</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+            <center><h1><b>Product Add</b></h1></center><br>
             <div class="row g-3">
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Product Name</label>
